--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,3 +11,46 @@ main {
     top: 700px;
     z-index: 3
 }
+
+.centerVerticalHorizontal{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.centerVertical{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.container-header {
+    width: 100%;
+    height: 100vh;
+    background: #009FFF;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, hsla(351, 83%, 55%, 0.61), hsla(203, 100%, 50%, 0.61)), url("../img/Alcazaba.jpg");  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, rgba(236, 47, 75, 0.61), rgba(0, 157, 255, 0.61)), url("../img/Alcazaba.jpg"); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: 100% 100%;
+}
+
+.container-header span{
+    color: white;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -40%);
+}
+
+.container-header span h1{
+    letter-spacing: 10px;
+}
+
+.navHome {
+    transition: all 0.3s;
+}
+
+.navHome .nav-link{
+    transition: all 0.2s;
+    color:white;
+}
