--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,20 @@
+::-webkit-scrollbar {
+    width: 13px;
+    height: 13px;
+   }
+   ::-webkit-scrollbar-thumb {
+    background: linear-gradient(13deg, #49def5 14%,#94d8ff 64%);
+    border-radius: 10px;
+   }
+   ::-webkit-scrollbar-thumb:hover{
+    background: linear-gradient(13deg, #94d8ff 14%,#49DEF5 64%);
+   }
+   ::-webkit-scrollbar-track{
+    background: #ffffff;
+    border-radius: 10px;
+    box-shadow: inset 7px 10px 12px #f0f0f0;
+   }
+
 header{
     z-index: 999;
     position: absolute;
@@ -101,4 +118,34 @@ container-mg {
 
 .boxPhotographyAdmin:hover img{
     opacity: .8;
+}
+
+.carousel-control-prev:hover {
+    transition: background .4s;
+    background: #0000007d;
+}
+
+.carousel-control-next:hover {
+    transition: background .4s;
+    background: #0000007d;
+}
+
+.cardMain {
+    cursor: pointer;
+    transition: all 1s;
+}
+
+.cardMain h2{
+    transition: all 1s;
+    letter-spacing: 1px;
+}
+
+.cardMain button:hover {
+    transition: all .3s;
+    letter-spacing: 7px;
+}
+
+.cardMain:hover img{
+    transition: all .4s;
+    opacity: 0.5;
 }
