--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -37,7 +37,7 @@ container-mg {
 }
 
 .centerVerticalHorizontal{
-    position: absolute;
+    position: absolute!important;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -132,7 +132,11 @@ container-mg {
 
 .cardMain {
     cursor: pointer;
-    transition: all 1s;
+}
+
+.cardMain:hover{
+    transition: all .4s!important;
+    transform: translateY(-20px)!important;
 }
 
 .cardMain h2{
@@ -149,3 +153,44 @@ container-mg {
     transition: all .4s;
     opacity: 0.5;
 }
+
+/*loader */
+
+.lds-facebook {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-facebook div {
+    display: inline-block;
+    position: absolute;
+    left: 8px;
+    width: 16px;
+    background: #cef;
+    animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+  }
+  .lds-facebook div:nth-child(1) {
+    left: 8px;
+    animation-delay: -0.24s;
+  }
+  .lds-facebook div:nth-child(2) {
+    left: 32px;
+    animation-delay: -0.12s;
+  }
+  .lds-facebook div:nth-child(3) {
+    left: 56px;
+    animation-delay: 0;
+  }
+  @keyframes lds-facebook {
+    0% {
+      top: 8px;
+      height: 64px;
+    }
+    50%, 100% {
+      top: 24px;
+      height: 32px;
+    }
+  }
+  
+  .animate-zoom {animation:animatezoom 0.6s}@keyframes animatezoom{from{transform:scale(0);} to{transform:scale(1);}}
