--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -28,9 +28,9 @@ container-mg {
     margin: auto;
     padding: 30px 30px 30px 30px;
     width: 95%;
-    margin-bottom: 50px;
+    margin-top: 50px;
     border-radius: 6px;
-    box-shadow: 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
+    box-shadow: 0 16px 24px 2px rgb(0 0 0 / 0%), 0 6px 30px 5px rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(0 0 0 / 0%);
     background: #fff;
     top: 700px;
     z-index: 3
@@ -152,6 +152,11 @@ container-mg {
 .cardMain:hover img{
     transition: all .4s;
     opacity: 0.5;
+}
+
+.nav-admin a:hover{
+    transition: all .3s;
+    transform: scale(1.2);
 }
 
 /*loader */
