--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -171,6 +171,14 @@ container-mg {
     transform: scale(1.3);
 }
 
+.inputFindResult {
+    position:absolute;
+    background: white;
+    top: 61px;
+    border-radius: 10px!important;
+    box-shadow: 0 16px 24px 2px rgb(0 0 0 / 0%), 0 6px 30px 5px rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(0 0 0 / 0%);
+}
+
 /*loader */
 
 .lds-facebook {
