--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -175,11 +175,28 @@ container-mg {
     position:absolute;
     background: white;
     top: 61px;
+    max-height: 185px;
+    overflow: auto;
     border-radius: 10px!important;
     box-shadow: 0 16px 24px 2px rgb(0 0 0 / 0%), 0 6px 30px 5px rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(0 0 0 / 0%);
 }
 
-/*loader */
+.inputFindResult h1, h2, h3, h4, h5{
+margin: 0;
+}
+
+.inputFindResult .col-12{
+    cursor: pointer;
+    height: 50px;
+    border-radius: 10px;
+}
+
+.inputFindResult .col-12:hover{
+    background-color: #94d8ff;
+    opacity: .8;
+}
+
+/*loader 1 */
 
 .lds-facebook {
     display: inline-block;
@@ -217,6 +234,45 @@ container-mg {
       height: 32px;
     }
   }
+
+  /* loaders 2 */
+  
+  .lds-ring {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border: 8px solid #cef;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #cef transparent transparent transparent;
+  }
+  .lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  .lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  .lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
   
   .animate__animated.animate__slideInUp {
     --animate-duration: .72s;
