--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -65,10 +65,6 @@ container-mg {
 
 .container-header span{
     color: white;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -40%);
 }
 
 .container-header span h1{
@@ -98,7 +94,6 @@ container-mg {
 }
 
 #boxInputFindHeader {
-    width: 35%;
     transition: width 1s;
 }
 
@@ -164,6 +159,14 @@ container-mg {
     transform: scale(1.2);
 }
 
+.nav-link {
+  transition: none!important;
+}
+
+#navTitulo {
+  font-weight: 300;
+} 
+
 #waveHeaderMobile {
     display:none;
     width: 100%;
@@ -206,6 +209,50 @@ margin: 0;
   color: white;
 }
 
+#menuCategoriasPc {
+  display: block;
+}
+
+#menuCategoriasMobile {
+  display: none;
+}
+
+.menuCategoriasRow{
+  width: 500px;
+}
+
+#desenfoque {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 9998;
+  backdrop-filter: blur(5px);
+  display: none;
+}
+
+#menuDesplegableMobile {
+  position: fixed;
+  top: 0;
+  left: -50%;
+  width: 50%;
+  height: 100vh;
+  background-color: white;
+  z-index: 9999;
+  transition: left .4s;
+}
+
+#menuDesplegableMobileClose {
+  cursor: pointer;
+  font-size: 1.5rem;
+  float: right;
+}
+
+#menuDesplegableMobileClose:hover {
+  opacity: .8;
+}
+
 /* rating emoji */
 .boxEmojiRating{
   background-color:#252525;
@@ -237,6 +284,12 @@ margin: 0;
   -ms-transform: rotate(360deg);
   transform: rotate(360deg);
 }
+
+h3 .animate__fadeIn {
+  animation-delay: .8s;
+}
+
+
 
 /*loader 1 */
 
@@ -359,5 +412,12 @@ margin: 0;
     #waveHeaderMobile {
         display: block;
     }
-    
+
+    #menuCategoriasPc {
+      display: none;
+    }
+
+    #menuCategoriasMobile {
+      display: block;
+    }
   }  
