--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -253,6 +253,13 @@ margin: 0;
   opacity: .8;
 }
 
+.infoModalCol iframe{
+  width: 100%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  height: 19rem;
+}
+
 /* rating emoji */
 .boxEmojiRating{
   background-color:#252525;
@@ -289,7 +296,14 @@ h3 .animate__fadeIn {
   animation-delay: .8s;
 }
 
+#carouselMainEstablishment {
+  width: 100%;
+  height: 500px;
+}
 
+#carouselMainEstablishment img {
+  height: 500px;
+}
 
 /*loader 1 */
 
@@ -382,6 +396,14 @@ h3 .animate__fadeIn {
     .container-header {
         background-size: unset;
         background-position-y: top;
+    }
+
+    #carouselMainEstablishment {
+      height: 315px;
+    }
+
+    #carouselMainEstablishment img{
+      height: 315px;
     }
     
   }
